fixed grid alignment in landing page

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,8 +7,8 @@
     grid-template-rows: auto;
     grid-template-columns: 25% 25% 25% 25%;
     margin-top: 64px;
-    margin-right: 220px;
-    margin-left: 350px;
+    margin-right: 200px;
+    margin-left: 390px;
     margin-bottom: 55px;
 }
 
